# tno

./: .gitignore  AGENTS.md  Cargo.toml  GLOSSARY.md  LICENSE  README.md  TODO.md
.canon/: check.yml
.canon/draft/: configuration.md  thread-reuse-policy.md
.canon/expects/: interrogation.yml  project-quality.yml  sanity-checks.yml
.canon/specs/: Cache.md  Check Output.md  Cooldown.md  Interrogation Policy.md  Logs.md  Spec Expectations.md  cache.md  canon-check-command.md  canon-check-lazy-full-scope-reset.md  canon-check-order.md  canon-check-output.md  canon-gate-command.md  cooldown.md  (+11 more)
.codex-plugin/: plugin.json
.githooks/: pre-commit
scripts/: install.sh
specs/: Check Output.md  Logs.md
src/: app_server.rs  app_server_process.rs  app_server_protocol.rs  app_server_runner.rs  app_server_transport.rs  check.rs  check_cache.rs  check_command.rs  check_command_args.rs  check_command_finish.rs  check_config.rs  check_config_expansion.rs  check_errors.rs  check_generator_paths.rs  check_generator_templates.rs  check_generator_titles.rs  check_generators.rs  check_interrogation.rs  check_interrogation_policy.rs  check_interrogation_records.rs  check_interrogation_state.rs  check_lazy_reset.rs  check_model_fallback.rs  check_narrowing.rs  check_order_state.rs  check_output.rs  check_preflight.rs  check_query.rs  check_query_command.rs  check_reporting.rs  check_result.rs  check_selection.rs  check_types.rs  check_validation.rs  cli.rs  config_types.rs  evaluator.rs  evaluator_config.rs  evaluator_json.rs  evaluator_prompt.rs  (+47 more)
templates/: check.yml  pre-commit
(+53 files in other folders)
