[package]
name = "canon"
version = "0.1.0"
edition = "2021"
description = "AI linter for project expectations"
license = "MIT"
repository = "https://github.com/progbeat/canon"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
