[package]
name = "canon"
version = "0.1.0"
edition = "2021"
description = "AI linter for project expectations"
license = "MIT"
repository = "https://github.com/progbeat/canon"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = { version = "0.0.26", default-features = false, features = ["deserialize"] }
sha1 = "0.10"
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
